tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier12UMV-l37V2WvbSHGZQ5oMgAfBuw==__ASecondRinghasHi-Qjg1J4kuS-6937dCEUqHUw==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 9884921717989214035,
  "prerequisites": [
    15584223032475393689,
    3927784732497972212
  ],
  "properties": {
    "auto_claim": false,
    "desc": "As additional rings are placed closer to the star at the center of the Forge, the gravitational stress drastically increases on the structure. Graviton shards alleviate these stresses while also creating localized spacetime bridges to link the two rings and their modules' respective upgrades.\n\n[note]Adding a second ring to your Godforge allows for 4 additional modules, as well as allowing you to pick a second path in the split paths part of the upgrade tree.[/note]\n\n[note]Usage of a second ring requires the CD upgrade.[/note]",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§b§lA Second Ring has Hit the Godforge",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    15584223032475393689,
    3927784732497972212
  ],
  "rewards": [],
  "tasks": []
}
