tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier12UMV-l37V2WvbSHGZQ5oMgAfBuw==__AnEyeattheEndofT-kazCPEWoSmiZhR4bkHlEBQ==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 5019343597665338373,
  "prerequisites": [
    3219,
    5584830154924781078
  ],
  "properties": {
    "auto_claim": false,
    "desc": "So you have made yourself an Eternal DTPF or hopefully a few, and now it is time for the push to the next tier, UXV.\n\nIntroducing the final multiblock in the game, and by far the most expensive.\nIt introduces 4 new materials: Raw Stellar Plasma, White and Black Dwarf Matter and finally Universium.\n\nIt has 3 different tiered casings with 9 tiers each:\n\nSpacetime Compression Field Generator:\n- Determines the tier of the planet block that can be run and decreases the processing time by 3% per tier.\n\nTime Dilation Field Generator:\n- Decreases recipe time by 50% per tier, while decreasing the chance of a recipe succeeding by 9.25% per tier.\n\nStabilisation Field Generator:\n- Increases the chance of a recipe succeeding by 5% per tier, while decreasing the output of a recipe by 5% per tier.\n\nLower tier Stabilization Field Generators have a power output penalty.\n\nFinding the best setup of different casing tiers might be a hard task, so a calculator visualizing all the drops and setups has been created: [url]https://docs.google.com/spreadsheets/d/15j30mNnFIWBhwpJGuDrKTfiHBXNEEqyvB_r7ztFWlyQ[/url]\n\n[note]Be sure to read the tooltip of the Eye of Harmony controller, it explains everything in detail! Depending on your GUI scale it might have multiple pages.[/note]\n\n[note]Well... it explains mostly everything. The Eye of Harmony has an inbuilt pity system to make sure you don't lose your mind. Here's a quick rundown on how it operates:\n\n(All chances are decimals here)\nThere is a counter C that starts at the current recipe success chance P. If a recipe fails, (1-P)*P is added to C. If C reaches >= 1, the next roll is guaranteed to succeed and C resets to P. \nIf a recipe succeeds before C reaches >= 1, it resets in a similar manner.\nIf you switch recipes, C will be reset to P of the new recipe, even if the next roll would be a guarantee.\nThe guarantee can be canceled out by overflow penalties as they apply after the pity does. However, they do not reset C, so the guarantee is shifted to the next recipe cycle.\nIf parallels are > 1, pity doesn't apply.[/note]\n",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "An Eye at the End of Time",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    3219,
    5584830154924781078
  ],
  "rewards": [],
  "tasks": []
}
