tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier12UMV-l37V2WvbSHGZQ5oMgAfBuw==__BlackDwarfMatter-bPYTUdlkSCiRi0eDHHw7tw==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 15664724741015223223,
  "prerequisites": [
    5019343597665338373,
    6004498835735652345
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Reinforcing your casings with matter from white dwarfs was a good idea.\n\nYou can now accelerate a solar system until a black dwarf forms. This material will likely be key to observing and understanding what happens next.\n\nThis is the second of your three EOH materials. Use it to upgrade your casings to T7.\n\n[note]The EOH becomes power positive once all the casings are Tier 7.[/note]",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Black Dwarf Matter",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    5019343597665338373,
    6004498835735652345
  ],
  "rewards": [],
  "tasks": []
}
