tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier12UMV-l37V2WvbSHGZQ5oMgAfBuw==__GuzzlingMassiveA-5vAyoCzxQkSRpjzlDNwtrw==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 3238442467097062831,
  "prerequisites": [
    12108002297788236866
  ],
  "properties": {
    "auto_claim": false,
    "desc": "It can run 4 different recipes simultaneously, with 4 parallels for each recipe.\n\nA worthy upgrade for some SpaceTime.",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Guzzling Massive Amounts of Gas",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    12108002297788236866
  ],
  "rewards": [],
  "tasks": []
}
