tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier12UMV-l37V2WvbSHGZQ5oMgAfBuw==__MagneticMonopole-U7Ta5d7PSii76sbIPbltlw==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 16055132733293817239,
  "prerequisites": [
    9974706694212917942,
    13310461229019239002
  ],
  "properties": {
    "auto_claim": false,
    "desc": "With total mastery of the Forge of the Gods achieved, it is possible to begin a new universe-spanning initiative. It is now possible to quantize and extract graviton shards for use outside the Forge in powerful new technological endeavors; produce the most exotic plasmas beyond merely periodic elements; and most importantly, begin to understand the immense power of magmatter, a form of matter made entirely of magnetic monopoles with density and stability billions of times that of conventional bosonic matter. It is with this development you realize that the completion of the Forge was not the end goal, but merely a stepping stone to universal transcendence.\n\n[note]Required for UXV components, Magmatter is the second material the Heliofusion Exoticizer can create, and will require a second module. Read the Godforge Information in the UI for more information on how to automate this.[/note]\n\n[note]The creation of Magmatter requires the END upgrade.[/note]\n\n[note]Congrats! You can now move on to the UXV tier![/note]",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§b§lMagnetic Monopole Matter",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    9974706694212917942,
    13310461229019239002
  ],
  "rewards": [],
  "tasks": []
}
