tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier12UMV-l37V2WvbSHGZQ5oMgAfBuw==__RawStellarPlasma-uXczmEsfT2uRCSnx8Vm4RQ==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 5413132602151909445,
  "prerequisites": [
    5019343597665338373
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Created by all tiers of the Eye of Harmony, Raw Stellar Plasma can be used for several things including Stellar Catalyst.\n\n[note]You may want to be careful with this material, as later running EOHs with Astral Arrays requires this instead of Hydrogen and Helium, so make sure to never fully run out![/note]",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Raw Stellar Plasma",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    5019343597665338373
  ],
  "rewards": [],
  "tasks": []
}
