tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier12UMV-l37V2WvbSHGZQ5oMgAfBuw==__Shirabon-o8_pX-OSRJKBGzDsGujvNw==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 16398244587516784439,
  "prerequisites": [
    3219,
    12108002297788236866,
    8750016111539151842
  ],
  "properties": {
    "auto_claim": false,
    "desc": "A helper material needed in some UMV and UXV components. Have fun making millions.\n\n[note]This is extremely slow to make and to process.[/note]",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Shirabon",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    3219,
    12108002297788236866,
    8750016111539151842
  ],
  "rewards": [],
  "tasks": []
}
